operator/templates/fileb.yaml
kind: Service
apiVersion: v1 
metadata:
  name: espfb-service
spec:
  selector:
    app: espfb  
  ports:
    - protocol: TCP             # TCP
      targetPort: 18080         # the port esp exposes on the pod it runs in
      port: 80                  # the port within the K8 cluster
  type: ClusterIP
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: espfb-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       app: espfb
  template:
       metadata:
         labels:
           app: espfb
       spec:
         containers:
         - name: espfb-container
           image: filebrowser/filebrowser
           securityContext:
             runAsUser:  1001
             runAsGroup: 1001
           ports:
             - containerPort: 18080  # servers REST port
               name: http
           volumeMounts:
              - name: data            # the volume specified below
                mountPath: /mnt/data  # path persistent volume gets mounted to
                subPath: TEMPLATE_ESP_NAMESPACE
         volumes:
           - name: data
             persistentVolumeClaim:
               claimName: esp-pv
