operator/templates/postgres.yaml
kind: Service
apiVersion: v1 
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP            # TCP
      targetPort: 5432
      port: 80              
  type: ClusterIP
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       app: postgres
  template:
       metadata:
         labels:
           app: postgres
       spec:
         containers:
         - name: postgres
           image: postgres:10.4
           securityContext:
             runAsUser:  1001
             runAsGroup: 1001
           ports:
             - containerPort: 5432  # servers REST port
               name: postgresdb
           volumeMounts:
              - name: data            # the volume specified below
                mountPath: /mnt/data  # path persistent volume gets mounted to
                subPath: TEMPLATE_ESP_NAMESPACE
              - name: postgres-init   # the volume specified belows
                mountPath: /docker-entrypoint-initdb.d  # path persistent volume gets mounted to
                readOnly: true
         volumes:
           - name: data
             persistentVolumeClaim:
               claimName: esp-pv
           - name: postgres-init
             configMap:
               name: espdb-config
               items:
               - key: init-esp.sh
                 path: init-esp.sh
            
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postgres
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
  - host: postgres.TEMPLATE_ESP_NAMESPACE.TEMPLATE_ESP_DOMAIN
    http:
      paths:
      -  backend:
          serviceName: postgres-service # the service to hit
          servicePort: 80               # externally exposed port
